--- a/android-pdf-viewer/build.gradle
+++ b/android-pdf-viewer/build.gradle
@@ -4,19 +4,19 @@ ext {
     bintrayRepo = 'maven'
     bintrayName = 'android-pdf-viewer'
 
-    publishedGroupId = 'com.github.barteksc'
+    publishedGroupId = 'com.github.mobarokOP'
     libraryName = 'AndroidPdfViewer'
-    artifact = 'android-pdf-viewer'
+    artifact = 'pdf-viewer'
 
     libraryDescription = 'Android view for displaying PDFs rendered with PdfiumAndroid'
 
     siteUrl = 'https://github.com/barteksc/AndroidPdfViewer'
     gitUrl = 'https://github.com/barteksc/AndroidPdfViewer.git'
 
-    libraryVersion = '3.2.0-beta.1'
+    libraryVersion = '1.0.0'
 
-    developerId = 'barteksc'
-    developerName = 'Bartosz Schiller'
+    developerId = 'mobarokOP'
+    developerName = 'Mobarok Hossain'
     developerEmail = 'barteksch@boo.pl'
 
     licenseName = 'The Apache Software License, Version 2.0'
@@ -31,7 +31,7 @@ android {
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
-        versionName "3.2.0-beta.1"
+        versionName "1.0"
     }
 
 }
